--- a/Buổi 23 - Lớp và đổi tượng.ipynb
+++ b/Buổi 23 - Lớp và đổi tượng.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "40598ff8",
    "metadata": {},
    "outputs": [
@@ -56,24 +56,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nguyễn Tâm Điền đang dạy!\n"
+      "Python căn bản\n",
+      "Nguyễn Tâm Điền\n"
      ]
     }
    ],
    "source": [
-    "class GiangVien():\n",
+    "class giangvien:\n",
     "    ten = \"Nguyễn Tâm Điền\"\n",
-    "    tuoi = 32\n",
-    "    def day(self):\n",
-    "        print(self.ten,\"đang dạy!\")\n",
-    "        \n",
-    "GiangVien_Dien = GiangVien()\n",
-    "GiangVien_Dien.day()\n",
-    "# GiangVien_Binh = GiangVien()\n",
-    "# GiangVien_Binh.ten = \"Võ Thanh Bình\"\n",
-    "# GiangVien_Binh.tuoi = 20\n",
-    "\n",
-    "# GiangVien_Dien.day()"
+    "    mon = \"Python căn bản\"\n",
+    "    def inten(self):\n",
+    "        print(self.ten)        \n",
+    "dien = giangvien()\n",
+    "print(dien.mon)\n",
+    "dien.inten()"
    ]
   },
   {
@@ -86,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5358318d",
    "metadata": {},
    "outputs": [],
@@ -151,11 +147,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd2f5d7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NTD\n"
+     ]
+    }
+   ],
+   "source": [
+    "class giangvien:\n",
+    "    ten = \"Nguyễn Tâm Điền\"\n",
+    "    mon = \"Python căn bản\"\n",
+    "    def doiten(self,ten):\n",
+    "        self.ten = ten\n",
+    "    def inten(self):\n",
+    "        print(self.ten)        \n",
+    "dien = giangvien()\n",
+    "dien.doiten(\"NTD\")\n",
+    "dien.inten()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f15266fb",
    "metadata": {},
    "outputs": [
@@ -210,12 +225,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tên: Phạm Phương Đào Ngọc\n",
-      "Tuồi: 20\n"
+      "Điền\n",
+      "Python căn bản\n",
+      "Thắng\n",
+      "Python siêu cấp\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "class giangvien:\n",
+    "    def __init__(self,ten,mon):\n",
+    "        self.ten = ten\n",
+    "        self.mon = mon\n",
+    "        \n",
+    "    def doiten(self,ten):\n",
+    "        self.ten = ten\n",
+    "        \n",
+    "    def inten(self):\n",
+    "        print(self.ten)   \n",
+    "        \n",
+    "dien = giangvien(\"Điền\",\"Python căn bản\")\n",
+    "thang = giangvien(\"Thắng\",\"Python siêu cấp\")\n",
+    "\n",
+    "dien.inten()\n",
+    "print(dien.mon)\n",
+    "\n",
+    "thang.inten()\n",
+    "print(thang.mon)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3e6a0dae",
    "metadata": {},
    "outputs": [
@@ -245,6 +282,7 @@
     "class GiangVien:\n",
     "    ten = \"Nguyễn Tâm Điền\"\n",
     "    tuoi = 32\n",
+    "    \n",
     "    def __init__(self, ten, tuoi):\n",
     "        self.ten = ten\n",
     "        self.tuoi = tuoi\n",
@@ -345,7 +383,7 @@
    ],
    "source": [
     "class PhanSo:\n",
-    "    def __init__(self,tuso,mauso):\n",
+    "    def __init__(self, tuso, mauso):\n",
     "        self.tuso = tuso\n",
     "        self.mauso = mauso\n",
     "        \n",
@@ -417,11 +455,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "26d12a44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "NhanVien.In() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [27]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mprint\u001b[39m(ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam)\n\u001b[0;32m     19\u001b[0m Ngoc \u001b[38;5;241m=\u001b[39m NhanVien()\n\u001b[1;32m---> 21\u001b[0m \u001b[43mNgoc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: NhanVien.In() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "class NhanVien:\n",
+    "    def __init__(self, ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam):\n",
+    "        self.ten = ten\n",
+    "        self.tuoi = tuoi\n",
+    "        self.dia_chi = dia_chi\n",
+    "        self.tien_luong = tien_luong\n",
+    "        self.tong_so_gio_lam = tong_so_gio_lam\n",
+    "        \n",
+    "    def Nhap(self):\n",
+    "        ten = input(\"Nhập tên: \")\n",
+    "        tuoi = input(\"Nhập tuổi: \")\n",
+    "        dia_chi = input(\"Nhập địa chỉ: \")\n",
+    "        tien_luong = input(\"Nhập tiền lương: \")\n",
+    "        tong_so_gio_lam = input(\"Nhập tổng số giờ làm: \")\n",
+    "        \n",
+    "    def In(self, ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam):\n",
+    "        print(ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam)\n",
+    "        \n",
+    "Ngoc = NhanVien()\n",
+    "\n",
+    "Ngoc.Nhap()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
