--- a/Buổi 23 - Lớp và đổi tượng.ipynb
+++ b/Buổi 23 - Lớp và đổi tượng.ipynb
@@ -455,44 +455,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "26d12a44",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "NhanVien.In() takes 0 positional arguments but 1 was given",
+     "ename": "AttributeError",
+     "evalue": "'NhanVien' object has no attribute 'ten'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [27]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mprint\u001b[39m(ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam)\n\u001b[0;32m     19\u001b[0m Ngoc \u001b[38;5;241m=\u001b[39m NhanVien()\n\u001b[1;32m---> 21\u001b[0m \u001b[43mNgoc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: NhanVien.In() takes 0 positional arguments but 1 was given"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mten, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtuoi, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdiachi, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtienluong, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtonggiolam)\n\u001b[0;32m     12\u001b[0m Ngoc \u001b[38;5;241m=\u001b[39m NhanVien()\n\u001b[1;32m---> 14\u001b[0m \u001b[43mNgoc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36mNhanVien.In\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mIn\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mten\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtuoi, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdiachi, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtienluong, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtonggiolam)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NhanVien' object has no attribute 'ten'"
      ]
     }
    ],
    "source": [
     "class NhanVien:\n",
-    "    def __init__(self, ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam):\n",
-    "        self.ten = ten\n",
-    "        self.tuoi = tuoi\n",
-    "        self.dia_chi = dia_chi\n",
-    "        self.tien_luong = tien_luong\n",
-    "        self.tong_so_gio_lam = tong_so_gio_lam\n",
+    "    def nhap(self):\n",
+    "        self.ten = input(\"Tên: \")\n",
+    "        self.tuoi = int(input(\"Tuổi: \"))\n",
+    "        self.diachi = input(\"Địa chỉ: \")\n",
+    "        self.tienluong = int(input(\"Tiền lương: \"))\n",
+    "        self.tonggiolam = float(input(\"Tổng giờ làm: \"))\n",
     "        \n",
-    "    def Nhap(self):\n",
-    "        ten = input(\"Nhập tên: \")\n",
-    "        tuoi = input(\"Nhập tuổi: \")\n",
-    "        dia_chi = input(\"Nhập địa chỉ: \")\n",
-    "        tien_luong = input(\"Nhập tiền lương: \")\n",
-    "        tong_so_gio_lam = input(\"Nhập tổng số giờ làm: \")\n",
-    "        \n",
-    "    def In(self, ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam):\n",
-    "        print(ten, tuoi, dia_chi, tien_luong, tong_so_gio_lam)\n",
+    "    def In(self):\n",
+    "        print(self.ten, self.tuoi, self.diachi, self.tienluong, self.tonggiolam)\n",
     "        \n",
     "Ngoc = NhanVien()\n",
     "\n",
-    "Ngoc.Nhap()\n",
+    "Ngoc.In()\n",
     "    "
    ]
   }
@@ -513,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
